--- a/uFrmPrincipal.fmx
+++ b/uFrmPrincipal.fmx
@@ -6,340 +6,10 @@ object frmPrincipal: TfrmPrincipal
   StyleBook = dmPrincipal.StyleBookRise
   FormFactor.Width = 320
   FormFactor.Height = 480
-  FormFactor.Devices = [dkDesktop]
+  FormFactor.Devices = [Desktop]
   OnCloseQuery = FormCloseQuery
   OnKeyUp = FormKeyUp
   OnResize = FormResize
   OnShow = FormShow
-  DesignerMobile = True
-  DesignerWidth = 320
-  DesignerHeight = 427
-  DesignerDeviceName = '2.7 QVGA Android Phone'
-  DesignerOrientation = 0
-  DesignerOSVersion = ''
-  object VertScrollBoxFundo: TVertScrollBox
-    Align = alClient
-    Height = 402.000000000000000000
-    TabOrder = 0
-    Width = 320.000000000000000000
-    object pnlTitulo: TPanel
-      Align = alTop
-      Height = 41.000000000000000000
-      Width = 328.000000000000000000
-      TabOrder = 0
-      object lblTitulo: TLabel
-        Align = alLeft
-        Font.Size = 16.000000000000000000
-        Font.Style = [fsBold]
-        StyledSettings = [ssFamily, ssFontColor]
-        Height = 41.000000000000000000
-        Text = 'MyDeed'
-        Width = 81.000000000000000000
-        Trimming = ttCharacter
-      end
-      object imgMenu: TImage
-        MultiResBitmap = <
-          item
-            Width = 128
-            Height = 128
-            PNG = {
-              89504E470D0A1A0A0000000D4948445200000080000000800806000000C33E61
-              CB000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-              053C49444154785EED9DCDCB55551487EDC38F52F2555173D6444C53FC189408
-              0E0CA54135301089C621044D428868E0CC990311FF0571A003B3063A32422350
-              FCC8A8418868A248919585A566BF1FBD07E4EAF59E73EFDE57F7DACF86C5CBCB
-              D967DDB59EB5CE3EE7EEBDCEBE53A6D020000108400002108000042000010840
-              000210800004200001084000021080000420000108400002108040D9042664FE
-              0792C392CB927F24772557249F4F1E731F5A3002D3E4CFA792DF25F70688FB7C
-              22991A8C41B5EE2C90E75FB7087C6F621CD739F3ABA516C4F1B9F2E3BB2182DF
-              24C3799D3B27088BEADC784A1E7F3142F09B2438241DD6452B8CC0D604C16F92
-              607361BE576FAEAFD86F1326C0694681B2726A75C2E037A3C0F2B210B4B3F6E9
-              76DD8AEBB52183C539746630B39BCAA809F072370CAD7A2F6DD5ABB04E511360
-              7686384C64D0F9D855464D805B19C8E6D099C1CC6E2AA326C0C56E185AF5BED0
-              AA57619DA226C0890C71C8A1338399A83481E9925F127E15BC2E5D211787A28E
-              007F2B607B125E0BBBA5EB76427DA81A038159FA0C3F0B0C5AFE1D74FC47E978
-              7E0CF6F2111908BC2A9D7F8D90047FEADC3519EC42E518096CD467FD314412B8
-              30E4F531DAC9476524E099C16F3A24810B489664B407D58F81801F78DF911C91
-              B816B0F7DEEF873C1FF3D26FD487E307B0D75AE830532496495E9C0CF655FD75
-              E590EFF934084000021080000420000108400002108000042000010840000210
-              80000420000108400002108040E9046AAC07700DC01B92559285926724D7247E
-              05DC0521AE0DA00524F08A7C3A28F1AE60FD2A817DCC7D5C2C420B42C0A3DCC7
-              12977C0D2A016F8EBBEF76498D236490B0FFEF8603B8B743E07B13C42F979004
-              05A784AFFCB6577DBF7E1F15EC7FD5A6FB9EDF65D8EF9700AE20A644BCC054F2
-              C3DCA8577F73FEFE02FDAFDA647FD57BD4D37ED7C4B8237D21770D8DFA0284BF
-              E7A7F4CD73059B225E5229213D497C566530C65BCF856B5113C0337CA99B6F2B
-              E15AD404F0904D6B41206A02786E3F750BB946103501BCB093BAE5D099DA46F4
-              4D1258A4BF29BF067A42691E74CB22907222685F59AE63AD09784937C554B077
-              1C5B0CD232097849B7EBAC5F6FFF0FCB741DAB4DC04BB95ED21D3609764DEA80
-              66C1049C045ED27DD8BE40FD12C3C3BEAF7C6A010A0E7CAFE95ED2F5AA9E1776
-              FA05DECF0C7EE0ABE69E5F63867B55CF0B3B9EDB6FA6773DC9E3EFF94725DE63
-              9806010840000210800004200001084000021080000420000108400002108000
-              0420000108400002102899408DF5008ED7846485A4A907F08B24E724BF951C4C
-              6C7F34816775F83DC957927F25BD55417E8FE04BC9BB125E2D0B964D2BE5CF99
-              8704BD5F69D829F55D1E8C41B5EEBC29CF87F9FDE09B3ACFFB0CD00A26B05EB6
-              BBC277D8B2F05B3AF7B582FDAFDAF4D9F2FEA71182DF24CD45E9F04FD1D30A23
-              B03341F09B24D85198EFD59BFB9C08FC9A30017E96AE69D5532D08C05B0983DF
-              8C021B0BF2BFB5A951378858DB9A40FB8EEBDA772DA767D4047829430872E8CC
-              606637955113607A370CAD7ACF68D5ABB04E5113E0468638F8A1325C8B9A003F
-              6488D4F71974A2321301BFF93BECEC5FBFF39666B215B519087899DBCBBBA992
-              E064061B519999C0968409F076665B519F81804781C30992E08074D45A389321
-              2CE35539471F777E842438AB73BDA8442B9880B784393E44121CD339EC0E5A70
-              E0EF377DAAFEF10F48B9E66FD083E10DF5F1FE822E21A30523E0E17C9BE433C9
-              65897705B35C921C92BC2F792198CFB803010840000210800004200001084000
-              02108000042000010840000210800004200001084000021080406504FE0391BA
-              CC482A369AF40000000049454E44AE426082}
-          end>
-        Align = alRight
-        Height = 41.000000000000000000
-        Position.X = 272.000000000000000000
-        Width = 56.000000000000000000
-        OnClick = imgMenuClick
-        object InnerGlowEffect1: TInnerGlowEffect
-          Softness = 5.000000000000000000
-          GlowColor = claWhite
-          Opacity = 1.000000000000000000
-        end
-      end
-      object pnlPesquisa: TPanel
-        Align = alClient
-        Height = 41.000000000000000000
-        Width = 191.000000000000000000
-        TabOrder = 2
-        object imgPesquisar: TImage
-          MultiResBitmap = <
-            item
-              Width = 121
-              Height = 128
-              PNG = {
-                89504E470D0A1A0A0000000D49484452000000790000008008060000002F67C6
-                98000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                0A9249444154785EED9D698C6D4511C7455016451EABA0200F6507650946D080
-                CF054CF4035BD8E1034B145196042210130D2426A85120C184100D8A31123482
-                8040C0F8425842581FFB0E03288B6C03B2280AF8FFC15CB83E67E69E73AABABA
-                EF3D5D49652633E77457D5BFBB4F777575F532EF2997D692689B8A3719E20FEB
-                F79567F883FA09FF5BFC8F217E41BF3F2CBE577CCFCCCF07F4F3B572554D2BD9
-                32698B6F55FA3A7AFA4BE22F8ABF205ED8EAEDF91FFEA7FE7DADF82F337C837E
-                FEC7B1FC5AD43C16F8A8FE7782F836F19B81FCA2EAFA8DF82BE2F75684FC2DF0
-                7E1579A0F80AF1EB81C0CED588FE26197E24E6B350C9688115F5FED1E2BF1600
-                EC6C80D3E07E27DECAA8672F5F5F495A1F2F7EAA50706703FC22C9BA5D2FD1EA
-                A0F4AE7A676A8CC01D06FC0DC97D9678B50E7AF7E29585D2F2C2310577E99EFD
-                B4F438585CD24A247B23FABA24787942001E069CE517CBBC5E138E099625914B
-                A1E8BA98577CB9AF287F4A8AE3618A367A8EFA98859F2CEED5FA7A1729FC524F
-                001E6E547F90CECBF7A157EF2B25FFD5438007602F96EE1F9A64A0BF25E54AF0
-                58E518B287EBBC457660E364E20880731BB7A4FAEF923D266A3DBD77EDC1B336
-                7076B9F0EE15476D17F86C055E226693218A1E5445578BEF163383676F785ACC
-                1E32133E6419EC317F44BF0FF69FB7D1EF9F15E3338FA28B55D1EEE2B1DDC6DC
-                42C2B345977A98C4409789F1327DCC880EB3DF45627699D86D4A2D3BE59F6994
-                39DBEB0C4377263612BB53DF11A7F22AB1AE65B9778118BF744AC00FC88694A1
-                E2B3131A654A657F431CB9E6DC52F5FD3621D87C4A3636D83BFCD58312014C48
-                CE49E215C2357AB7C2EDF52B4BA014BD7A4966DD1A9B95F01C5AA5B71198896E
-                D4588AB40F2EABE28F15A770EA3017289ECE7306986FE18FC5CB15A8F9A72513
-                519E9E0D9A08D1CD0BD4F51D91767656F85595B747C90A4BB60562B6143D81C6
-                F55924B1F6F4DC559A56793B15A9E9FF0BC504F0F7CE40EF5FA2EE473A2AF9BC
-                CADABA4425E79189E5D6398E36785465BDAF241B200C42790C590CD13B96A45C
-                0B599837FCC9C90ED8F2D01675277FF41027C59864E1E21B67C20974BD933DEE
-                5739CCE4B313C3D47D4E4A9D925D1B1F01D657317C723C46B6FD7C44B295B29B
-                9332D7A89C1297495DADC388E401F24D5D05F07CEF7C0765F80E7FDC53A842CA
-                FAA5836D6828B854B3119BDE1E5E9FEF65D3206DC51CA5F518B67F9856CCF94B
-                FFA6434B65AF3772A321DA5E1E1131ECB6658BF4E43B6AFDEEB0073CC9E4B5BC
-                E40C7638ADAA1AAD41798FA88CA216FC89ACE8E128C27F1F4EBB39F4E263C2A5
-                CE5321E144CF18ED75630ED14F370ACD6ECBEA3904CF54E719467B316A2E8896
-                FD76A3D07F8C1638737D9F31DA8BB9CFAE913AACA2CAAC314FFB440A5C485D44
-                915A26AA61DF65A6F284B0B60DCD1DB6338AFEB910C3478A61D599F455213400
-                D9521943FDB39602C6F45D820B2C149688C603E42B2D9A8EF1BB56BD3790EE21
-                4B4E0F9089C7EE233D29A59F3328CE06CE270CEF377E1590D76DFCF4EC0FB235
-                D957B2EA6EB57D23BB0332E7882C6455D45277EE77ADBA5B6DDF487F0F90F1FE
-                F495ACBA87814C4297AE44865AB627FB4A1C3CB05018C8968A383ADA67B2821C
-                928A22DBBE669F5BC690EE212152806C698D96A17E1270B68C82E81F92681D90
-                2D432E8BF9498E0419D510AD205B6C3F4AB677FE6FEDC914B446E3DA26EF41AB
-                EED31126F10079AC0E5B3B1BD5AA3B691C931320135866A13047BB45C844EF5A
-                75278F497202644E2F5AA8E8F3B716C546BCBBB6FE4F6C5C57628B76AAEBCB6D
-                DEF300F9F36D2A9CA067171975E150210711929307C89F9494D6094872451354
-                600DABBD23814CB31609C85C90C5D0D195882AE9630E68ABCEE1E7A26E9B01BA
-                6BCC52DF02F9C81AD4D55683F7B8932A944E330A8DE7A64F43F6CF8CF622EB60
-                88DF7AB815111E6A6D99C78436CB7C957904D793E22A9C16A846EB3199E2F262
-                24B2E2510E1DE2BB89641B592C9968ADBD995414934C64457ACCC14ED97C0B87
-                3B084FC079CE348AA91B98C761374298B391D721F4EF67D3206DC51C429F76E8
-                086402CE4ADC90621DB2F1E284849A065BEA570EB6611592FDBE0A8F59368D84
-                D96348D44310D07B3A008C5DCE0D9277DE6A066E4E6B6FE6FDB1C810DBC0E89C
-                74F018A6B109A7218B2052427880CC49497AC038D307243C07C63DECB1B82443
-                10D2436A080FC5485C3EAEBB547C6E2E75B203B65C5412C8C8E291E566D04818
-                EAB62D4DC111F2901EF1D78E005F5EA2FEF466AEE8F1E8CD94F142892D790EC3
-                1398E8B1CA18D80E4FE2D625828C4CDC01E50532E53074EF55AAB2337211E9C1
-                B7D353EF5F14AEF35B537E4F8529EB5471C8B9DC96C665E63B95405FDCA045FB
-                0DB831EDC5048A5FA732C3D2298C009B09165E281C15DE0D7A501E9B3745E71B
-                25B57E0AE53928F70371E4357B4BE3FD39FDC11A30D1D436C503FDF344406320
-                9467361FB9B1B195EAE3A61C6BD6A3A6000F9E63698A73A548A2B71178D656A9
-                36CF3FAEF24F14A73A7DCFB2E8ABE20B13EB314AE729D5BFB0489425D466E2E9
-                0003B1E4207DD2610EAD9EC649C0DD4FC54F04C83E0AE0C1FF43816E9BBF6B91
-                0CC58DA89187DC30C85562A24A3908C05D0E34364E63C2C357EB72231D133A4E
-                3670B5EE0EC1B2B6E9A0E8853D19C28B23FCD1D650A1A62D7ED29F7B48B6B45E
-                1F9CAC817824409F74009BEA573CD0B547FB4C46099B5A2F599734168C9BD2E3
-                DE8AA6AD7E929FE36A87542B0B23CC6FFBB8535CBF3BC980CEA55BD1406F21A0
-                EF12F711186F9D593DB04A289288A238A702EDD2D0019A7D8362898B274978E2
-                DDC2FB561E291D8B069AB5DFF9130274CADDA9510D17E74FD14033D47C4DCC3A
-                70943225FE7F5A721F2B5E477C6B461DF0F42143D184FF186395E43B9EAF51BD
-                22597F221EBE1D8763B9B981264749F1C456E2B7C56C2D96D873894323567CAE
-                5E03D0517BCFB3D98798BBB1009A9648E80FF708B3D1C161ECDC80D343D9CF6E
-                925D6F4D3D67BD5EC9A22FCBD4ECC76CDA0E27F49AE3C4B70483CD3C812B7BBA
-                840A0374EABDF5F91A024073F86E2C09C1F7159F25C6F36369F14BBFCB5D1117
-                8B991B90ADC84AC89A1368EEFD680C74DBFD64AB71DABCCF37907DE16166A862
-                5825DF063F6100659943C02160720108DF7D9CFE7CC7188E6934DE8491178B73
-                1D280768D24CFDDD5BB15ADEFF5A804697D39DCBFC80CF47A5C41660C6EB79DA
-                A4ED678A197F9F322F258673EEE2017A90F4AE2D481ECF57A083A067A5901368
-                E61EB54707800DD0F89B3D7A67973296A8EE3EDD631D00E9EC55B0A19013687C
-                0E24F9A994D80200CD566197DEE8F14E053A31C083E289EE60F3DF03B42E65DC
-                5C7B740CD204E6797BEFDA004E16A6128F09C7583FB096DC401F11A86BAFAB22
-                A61A376B9B5EE8F5ECF5BDB67CB0F28444E58892218D47A5400BE4003AE43293
-                401B8E4555EB4BCA870387EE3A5C676A160B55EF5410D075E2950964AA8D00FA
-                1AD53349896C33C2D5BD6AF28778A5B85C7A365E9D21DD71717F93D44FDE11AC
-                D5ADE90E93BD404FA097489CBA1365C724490964EDB35E62C29E720538093C7E
-                850234571D77F176D5A0013F1C9297B46107A06BF84F7258FC2BD84845728176
-                931E5D2336FDED1F566213A009F0AF21B96190A4A98859F70D73F468AE4E6814
-                B857F2098A34661BBF52C1681731097800951CA49788B35CEA397EE6AB12570B
-                540B540B540B540B540B540B540B540B785AE0BF7811E8FF80A57B9200000000
-                49454E44AE426082}
-            end>
-          Align = alLeft
-          Height = 31.000000000000000000
-          Margins.Top = 5.000000000000000000
-          Margins.Bottom = 5.000000000000000000
-          Position.X = 141.000000000000000000
-          Position.Y = 5.000000000000000000
-          Width = 50.000000000000000000
-        end
-        object edtPesquisar: TEdit
-          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-          Align = alLeft
-          TabOrder = 1
-          Position.Y = 5.000000000000000000
-          Width = 141.000000000000000000
-          Height = 31.000000000000000000
-          Margins.Top = 5.000000000000000000
-          Margins.Bottom = 5.000000000000000000
-          TextPrompt = 'Pesquisar'
-          StyledSettings = []
-          KillFocusByReturn = False
-        end
-      end
-    end
-    object RetanguloMenu: TRectangle
-      Height = 40.000000000000000000
-      Position.X = 136.000000000000000000
-      Position.Y = 41.000000000000000000
-      Width = 192.000000000000000000
-      object AniFloatMenu: TFloatAnimation
-        Duration = 0.200000002980232200
-        Inverse = True
-        PropertyName = 'Height'
-        StartValue = 0.000000000000000000
-        StopValue = 120.000000000000000000
-      end
-      object retanguloNovo: TRectangle
-        Align = alTop
-        Fill.Color = claLightskyblue
-        Height = 41.000000000000000000
-        Width = 192.000000000000000000
-        object lblNovo: TLabel
-          Align = alLeft
-          StyledSettings = [ssFamily, ssSize, ssStyle]
-          Height = 41.000000000000000000
-          Text = 'Novo'
-          TextAlign = taCenter
-          Width = 81.000000000000000000
-          Trimming = ttCharacter
-        end
-        object ShadowEffect2: TShadowEffect
-          Distance = 3.000000000000000000
-          Direction = 45.000000000000000000
-          Softness = 0.300000011920929000
-          Opacity = 0.600000023841857900
-          ShadowColor = claBlack
-        end
-        object imgNovo: TImage
-          MultiResBitmap = <
-            item
-              Width = 128
-              Height = 122
-              PNG = {
-                89504E470D0A1A0A0000000D49484452000000800000007A080600000077375B
-                B4000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                05B149444154785EED9D4D881C551485DF7BDD659C8506234248AAEBA7BBCD20
-                26880C8A1094A0B8104410171210DCB833A02288C4AD594870212A6E5CB91145
-                DC050525A023C942413712647EECEA802064110485C94C5579C7851262A6BAAA
-                DFBB7D5FD5E96DD5BBE7DC73BFD45F574FB462FCA469FAA0298A038C92E2A48C
-                52D95A965D92624C731919C5F169A5F4192E3DA93AA552EF6F66935352FC1190
-                CE3F661827EF61F8CE736E24E01480388E6F1D0D92CFE830F362237758E43C01
-                6700846178A0AFF4D7CAA8A79D770181C609380160381C46B794FDEFC8D5F1C6
-                CEB0902501EB002449729FCA8B8BBAAFEE61E90022732560158061143D5A6C6F
-                7F4BE7FC4373B9C262B604AC01308CE3933B3BF917413FB89DCD3D84E64EC0CA
-                7300BAC77F956EF3CE921B2BF554914F95312FCDDD1D6301BABF3FA895FEA04A
-                52DA73807907A68751F2B6D6EA95AAC6EB6CCF95FA79924D8ED659B3E87D47E1
-                68AC7AF95A950F6900343E058CC7E37D69147D6C7BF8550162BBDD041A0140B7
-                79FBF3AD9D2F8D36CFDAB5836ADC09D406E0EE303CACF37CD5187582DB2CF4EC
-                27500B80D16070EF963117E95AEF987D2BA8B888046606201DA40F2BD35B0DB4
-                192CC22834DD2430130074B1F74C9E5FFB8A2CDCE1C606AA2E2A814A0046517A
-                8A2EF63E0D8260DFA24C42D75D027B01A0E901CF5B4A97EF927C2528EE2CA2B2
-                CB04FE77B02B2B2B013DDAFD882EF65E73298EDA8B4FE006009697976FBB7AE5
-                CA397AACF9DCE2EDC181EB04AE0380DEE03978EDCFAD6FE85FFEE3AE85515F46
-                02FF02406FEC1EE9297DC1F4D4FD32ACC1054702FF00308EE38754515EA06F86
-                520E5168C849C0D04B9B4F954A9F2712EE94630B4EB812307483F739892D7109
-                42475602BBA7809E2C4B70C399001EF070A62D500B00081C0AA72500C099B640
-                2D002070289C96000067DA02B50080C0A1705A02009C690BD4A2EFFC137A557D
-                EFCF8E2AD77BA5FEA46A3F5BDBE991F4EF1BD3C9EE7B08DE7C7CFD5DC04C00D0
-                14CE6D649327BD99C6028C1E89A2745B9BEFABA48D2A3FDCC8B2D7ABF6E3DA0E
-                00B89216AA836B00A183E1B20500B89216AA0300840E86CB1600E04A5AA80E00
-                103A182E5B00802B69A13A0040E860B86C0100AEA485EA0000A183E1B20500B8
-                9216AA0300840E86CB16BE0B689E748F7E4A7757F3E537AEA49FE0FFB5BEBEFE
-                87CD9A55B50040554237D94EC34FE88F61FFDA70F94D9695EFD037852FDBADB9
-                77359C0238D316A80500040E85D31200E04C5BA016001038144E4B0080336D81
-                5A0040E050382D0100CEB4056A01008143E1B4040038D316A80500040E85D312
-                00E04C5BA016001038144E4B0080336D815A0040E050382D0100CEB4056A0100
-                8143E1B4040038D316A80500040E85D31200E04C5BA016001038144E4B008033
-                6D815A0040E050382D0100CEB4056A01008143E1B4040038D316A8D59A5F06D1
-                FF73F8842AF4636C199B723FFDD77A2FD8D42B72F5A3D6EABCCD9A55B5DA0340
-                94BC49E1BD51D530B65F9F004E011D27020000808E27D0F1F6710400001D4FA0
-                E3EDE30800003A9E40C7DBC7110000743C818EB78F230000E878021D6F1F4700
-                00D0F1043ADE3E8E0000A0E30974BC7D1C010040C713E878FBED792328499E57
-                457192719E4B5A9B47ACEA15F9B4D4FA92D59A15C55A03006768BB5AF86BE1DC
-                8943CF4902B8087412AB3F4501803FB372E214003889D59FA200C09F5939710A
-                009CC4EA4F5100E0CFAC9C3805004E62F5A72800F067564E9C020027B1FA5314
-                00F8332B274E01809358FD290A00FC999513A700C049ACFE140500FECCCA8953
-                00E024567F8ACEF44248A9D46F6559ACFAD3563DA77DA54EAF4DA79B7556B5E5
-                85909900A8138C8FFB96857960F3F2E60F75BCB705009C02EA4CBD85FB028016
-                0EB54E4B00A04E5A2DDC1700B470A8755A020075D26AE1BE00A08543ADD3921E
-                1D3A7CB5CE8236EE6B82FE89B52CFBA94E6F6DB90DD4759AC6BEFF251086E152
-                6082E33633294D79793299FC62B36655ADBF012405F499017F00870000000049
-                454E44AE426082}
-            end>
-          Align = alLeft
-          Height = 41.000000000000000000
-          Position.X = 81.000000000000000000
-          Width = 40.000000000000000000
-        end
-      end
-      object ShadowEffect1: TShadowEffect
-        Distance = 3.000000000000000000
-        Direction = 45.000000000000000000
-        Softness = 0.300000011920929000
-        Opacity = 1.000000000000000000
-        ShadowColor = claBlack
-      end
-    end
-  end
-  object tmrAtualizaFeed: TTimer
-    Enabled = False
-    OnTimer = tmrAtualizaFeedTimer
-    Left = 120
-    Top = 344
-  end
-  object SpeedButton1: TSpeedButton
-    Height = 44.000000000000000000
-    Position.X = 232.000000000000000000
-    Position.Y = 344.000000000000000000
-    Text = 'teste'
-    Trimming = ttCharacter
-    Width = 73.000000000000000000
-    OnClick = SpeedButton1Click
-  end
+  DesignerMasterStyle = 0
 end
